Update from https://github.com/thebesttv/eserver-static/commit/bcd4799847fec909c281a2e9466050c69bc1c9f8

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-12 02:58 -->
+<!-- 2022-10-13 03:01 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf49caa2">1. 妙妙文章</a>
+<li><a href="#org40c8753">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgc44d719">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgde34b47">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgfd06255">1.3. 关于编辑器</a></li>
-<li><a href="#org62ced04">1.4. 关于代码</a>
+<li><a href="#org5768db8">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org700c38c">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org599a96e">1.3. 关于编辑器</a></li>
+<li><a href="#org1d845af">1.4. 关于代码</a>
 <ul>
-<li><a href="#org58da7d9">1.4.1. Lisp</a></li>
+<li><a href="#org1e5edda">1.4.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org6f20b16">1.5. 关于CPU</a></li>
-<li><a href="#orgc444f14">1.6. 关于算法</a>
+<li><a href="#orgc18cd78">1.5. 关于CPU</a></li>
+<li><a href="#org3db9ec0">1.6. 关于算法</a>
 <ul>
-<li><a href="#orgc46d796">1.6.1. 关于随机</a></li>
+<li><a href="#org1c2909f">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org6e0f760">1.7. 关于AI</a></li>
-<li><a href="#orgcb35fde">1.8. 关于软件</a>
+<li><a href="#org84529b1">1.7. 关于AI</a></li>
+<li><a href="#org2cefeb5">1.8. 关于软件</a>
 <ul>
-<li><a href="#org39cf5a7">1.8.1. SQLite</a></li>
+<li><a href="#org76039de">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org84f2a34">1.9. 关于workflow</a></li>
+<li><a href="#orgc626766">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org5aa5435">2. 棒棒视频</a>
+<li><a href="#orgd03219f">2. 棒棒视频</a>
 <ul>
-<li><a href="#org1d8e7a5">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org76442f3">2.2. 各种剧</a></li>
-<li><a href="#org62416ee">2.3. 电影</a></li>
+<li><a href="#org01017d2">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org0f37efd">2.2. 各种剧</a></li>
+<li><a href="#orge1eed71">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org71d9328">3. 快乐游戏</a></li>
-<li><a href="#org06aa8f3">4. 宝藏博主</a></li>
-<li><a href="#org736f709">5. 有意思的</a>
+<li><a href="#org16a1173">3. 快乐游戏</a></li>
+<li><a href="#org1351d12">4. 宝藏博主</a></li>
+<li><a href="#org28a9b9d">5. 有意思的</a>
 <ul>
-<li><a href="#org9dfa344">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org5a54e14">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org2a8c5dd">6. 我想玩的</a></li>
+<li><a href="#org0daeab0">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgf49caa2" class="outline-2">
-<h2 id="orgf49caa2"><span class="section-number-2">1.</span> <a href="#orgf49caa2">妙妙文章</a></h2>
+<div id="outline-container-org40c8753" class="outline-2">
+<h2 id="org40c8753"><span class="section-number-2">1.</span> <a href="#org40c8753">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org2510118">
+<figure id="org22e3110">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgc44d719" class="outline-3">
-<h3 id="orgc44d719"><span class="section-number-3">1.1.</span> <a href="#orgc44d719">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org5768db8" class="outline-3">
+<h3 id="org5768db8"><span class="section-number-3">1.1.</span> <a href="#org5768db8">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgde34b47" class="outline-3">
-<h3 id="orgde34b47"><span class="section-number-3">1.2.</span> <a href="#orgde34b47">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org700c38c" class="outline-3">
+<h3 id="org700c38c"><span class="section-number-3">1.2.</span> <a href="#org700c38c">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgfd06255" class="outline-3">
-<h3 id="orgfd06255"><span class="section-number-3">1.3.</span> <a href="#orgfd06255">关于编辑器</a></h3>
+<div id="outline-container-org599a96e" class="outline-3">
+<h3 id="org599a96e"><span class="section-number-3">1.3.</span> <a href="#org599a96e">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org62ced04" class="outline-3">
-<h3 id="org62ced04"><span class="section-number-3">1.4.</span> <a href="#org62ced04">关于代码</a></h3>
+<div id="outline-container-org1d845af" class="outline-3">
+<h3 id="org1d845af"><span class="section-number-3">1.4.</span> <a href="#org1d845af">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -615,8 +615,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org58da7d9" class="outline-4">
-<h4 id="org58da7d9"><span class="section-number-4">1.4.1.</span> <a href="#org58da7d9">Lisp</a></h4>
+<div id="outline-container-org1e5edda" class="outline-4">
+<h4 id="org1e5edda"><span class="section-number-4">1.4.1.</span> <a href="#org1e5edda">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-4-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -639,8 +639,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org6f20b16" class="outline-3">
-<h3 id="org6f20b16"><span class="section-number-3">1.5.</span> <a href="#org6f20b16">关于CPU</a></h3>
+<div id="outline-container-orgc18cd78" class="outline-3">
+<h3 id="orgc18cd78"><span class="section-number-3">1.5.</span> <a href="#orgc18cd78">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -655,8 +655,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgc444f14" class="outline-3">
-<h3 id="orgc444f14"><span class="section-number-3">1.6.</span> <a href="#orgc444f14">关于算法</a></h3>
+<div id="outline-container-org3db9ec0" class="outline-3">
+<h3 id="org3db9ec0"><span class="section-number-3">1.6.</span> <a href="#org3db9ec0">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc46d796" class="outline-4">
-<h4 id="orgc46d796"><span class="section-number-4">1.6.1.</span> <a href="#orgc46d796">关于随机</a></h4>
+<div id="outline-container-org1c2909f" class="outline-4">
+<h4 id="org1c2909f"><span class="section-number-4">1.6.1.</span> <a href="#org1c2909f">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org6e0f760" class="outline-3">
-<h3 id="org6e0f760"><span class="section-number-3">1.7.</span> <a href="#org6e0f760">关于AI</a></h3>
+<div id="outline-container-org84529b1" class="outline-3">
+<h3 id="org84529b1"><span class="section-number-3">1.7.</span> <a href="#org84529b1">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgcb35fde" class="outline-3">
-<h3 id="orgcb35fde"><span class="section-number-3">1.8.</span> <a href="#orgcb35fde">关于软件</a></h3>
+<div id="outline-container-org2cefeb5" class="outline-3">
+<h3 id="org2cefeb5"><span class="section-number-3">1.8.</span> <a href="#org2cefeb5">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org39cf5a7" class="outline-4">
-<h4 id="org39cf5a7"><span class="section-number-4">1.8.1.</span> <a href="#org39cf5a7">SQLite</a></h4>
+<div id="outline-container-org76039de" class="outline-4">
+<h4 id="org76039de"><span class="section-number-4">1.8.1.</span> <a href="#org76039de">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org84f2a34" class="outline-3">
-<h3 id="org84f2a34"><span class="section-number-3">1.9.</span> <a href="#org84f2a34">关于workflow</a></h3>
+<div id="outline-container-orgc626766" class="outline-3">
+<h3 id="orgc626766"><span class="section-number-3">1.9.</span> <a href="#orgc626766">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5aa5435" class="outline-2">
-<h2 id="org5aa5435"><span class="section-number-2">2.</span> <a href="#org5aa5435">棒棒视频</a></h2>
+<div id="outline-container-orgd03219f" class="outline-2">
+<h2 id="orgd03219f"><span class="section-number-2">2.</span> <a href="#orgd03219f">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -795,8 +795,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org1d8e7a5" class="outline-3">
-<h3 id="org1d8e7a5"><span class="section-number-3">2.1.</span> <a href="#org1d8e7a5">Veritasium 真理元素</a></h3>
+<div id="outline-container-org01017d2" class="outline-3">
+<h3 id="org01017d2"><span class="section-number-3">2.1.</span> <a href="#org01017d2">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -821,8 +821,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org76442f3" class="outline-3">
-<h3 id="org76442f3"><span class="section-number-3">2.2.</span> <a href="#org76442f3">各种剧</a></h3>
+<div id="outline-container-org0f37efd" class="outline-3">
+<h3 id="org0f37efd"><span class="section-number-3">2.2.</span> <a href="#org0f37efd">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -845,8 +845,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org62416ee" class="outline-3">
-<h3 id="org62416ee"><span class="section-number-3">2.3.</span> <a href="#org62416ee">电影</a></h3>
+<div id="outline-container-orge1eed71" class="outline-3">
+<h3 id="orge1eed71"><span class="section-number-3">2.3.</span> <a href="#orge1eed71">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -872,8 +872,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org71d9328" class="outline-2">
-<h2 id="org71d9328"><span class="section-number-2">3.</span> <a href="#org71d9328">快乐游戏</a></h2>
+<div id="outline-container-org16a1173" class="outline-2">
+<h2 id="org16a1173"><span class="section-number-2">3.</span> <a href="#org16a1173">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -902,8 +902,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org06aa8f3" class="outline-2">
-<h2 id="org06aa8f3"><span class="section-number-2">4.</span> <a href="#org06aa8f3">宝藏博主</a></h2>
+<div id="outline-container-org1351d12" class="outline-2">
+<h2 id="org1351d12"><span class="section-number-2">4.</span> <a href="#org1351d12">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -914,7 +914,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org6967976">
+<figure id="orgd1a03e9">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -922,8 +922,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org736f709" class="outline-2">
-<h2 id="org736f709"><span class="section-number-2">5.</span> <a href="#org736f709">有意思的</a></h2>
+<div id="outline-container-org28a9b9d" class="outline-2">
+<h2 id="org28a9b9d"><span class="section-number-2">5.</span> <a href="#org28a9b9d">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -947,8 +947,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org9dfa344" class="outline-3">
-<h3 id="org9dfa344"><span class="section-number-3">5.1.</span> <a href="#org9dfa344">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org5a54e14" class="outline-3">
+<h3 id="org5a54e14"><span class="section-number-3">5.1.</span> <a href="#org5a54e14">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -960,8 +960,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org2a8c5dd" class="outline-2">
-<h2 id="org2a8c5dd"><span class="section-number-2">6.</span> <a href="#org2a8c5dd">我想玩的</a></h2>
+<div id="outline-container-org0daeab0" class="outline-2">
+<h2 id="org0daeab0"><span class="section-number-2">6.</span> <a href="#org0daeab0">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -984,7 +984,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-12 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 03:01</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
