--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-12 02:58 -->
+<!-- 2022-10-13 03:01 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -36,17 +36,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9472e28">1. 一大早</a></li>
-<li><a href="#orgee8f0bc">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org756a3c8">3. 科研训练</a></li>
-<li><a href="#orgea85ced">4. 520</a></li>
+<li><a href="#orgb1da3f9">1. 一大早</a></li>
+<li><a href="#org5c14f1c">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#orgfb0eab6">3. 科研训练</a></li>
+<li><a href="#orgdff9799">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org9472e28" class="outline-2">
-<h2 id="org9472e28"><span class="section-number-2">1.</span> <a href="#org9472e28">一大早</a></h2>
+<div id="outline-container-orgb1da3f9" class="outline-2">
+<h2 id="orgb1da3f9"><span class="section-number-2">1.</span> <a href="#orgb1da3f9">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -55,8 +55,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgee8f0bc" class="outline-2">
-<h2 id="orgee8f0bc"><span class="section-number-2">2.</span> <a href="#orgee8f0bc">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org5c14f1c" class="outline-2">
+<h2 id="org5c14f1c"><span class="section-number-2">2.</span> <a href="#org5c14f1c">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -82,8 +82,8 @@
 </div>
 </div>
 
-<div id="outline-container-org756a3c8" class="outline-2">
-<h2 id="org756a3c8"><span class="section-number-2">3.</span> <a href="#org756a3c8">科研训练</a></h2>
+<div id="outline-container-orgfb0eab6" class="outline-2">
+<h2 id="orgfb0eab6"><span class="section-number-2">3.</span> <a href="#orgfb0eab6">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -91,8 +91,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgea85ced" class="outline-2">
-<h2 id="orgea85ced"><span class="section-number-2">4.</span> <a href="#orgea85ced">520</a></h2>
+<div id="outline-container-orgdff9799" class="outline-2">
+<h2 id="orgdff9799"><span class="section-number-2">4.</span> <a href="#orgdff9799">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -106,7 +106,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-12 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 03:01</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
