--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-12 02:58 -->
+<!-- 2022-10-13 03:01 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgfa36565">1. 暑假</a>
+<li><a href="#orgf4796dd">1. 暑假</a>
 <ul>
-<li><a href="#org2475f14">1.1. 夏令营</a></li>
+<li><a href="#org93e817e">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgc543f32">2. 打工</a></li>
-<li><a href="#org7d2e986">3. 我的928</a>
+<li><a href="#org0bea2d5">2. 打工</a></li>
+<li><a href="#orgc5dc91d">3. 我的928</a>
 <ul>
-<li><a href="#org6a0b881">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org4f92440">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orge63032c">4. 他们的928</a></li>
-<li><a href="#orgb422f64">5. 总结</a></li>
+<li><a href="#org33f5593">4. 他们的928</a></li>
+<li><a href="#org1365a32">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org1344002">
+<figure id="orge52fead">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgfa36565" class="outline-2">
-<h2 id="orgfa36565"><span class="section-number-2">1.</span> <a href="#orgfa36565">暑假</a></h2>
+<div id="outline-container-orgf4796dd" class="outline-2">
+<h2 id="orgf4796dd"><span class="section-number-2">1.</span> <a href="#orgf4796dd">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-org2475f14" class="outline-3">
-<h3 id="org2475f14"><span class="section-number-3">1.1.</span> <a href="#org2475f14">夏令营</a></h3>
+<div id="outline-container-org93e817e" class="outline-3">
+<h3 id="org93e817e"><span class="section-number-3">1.1.</span> <a href="#org93e817e">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc543f32" class="outline-2">
-<h2 id="orgc543f32"><span class="section-number-2">2.</span> <a href="#orgc543f32">打工</a></h2>
+<div id="outline-container-org0bea2d5" class="outline-2">
+<h2 id="org0bea2d5"><span class="section-number-2">2.</span> <a href="#org0bea2d5">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org7d2e986" class="outline-2">
-<h2 id="org7d2e986"><span class="section-number-2">3.</span> <a href="#org7d2e986">我的928</a></h2>
+<div id="outline-container-orgc5dc91d" class="outline-2">
+<h2 id="orgc5dc91d"><span class="section-number-2">3.</span> <a href="#orgc5dc91d">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org6a0b881" class="outline-3">
-<h3 id="org6a0b881"><span class="section-number-3">3.1.</span> <a href="#org6a0b881">928演唱会(bushi</a></h3>
+<div id="outline-container-org4f92440" class="outline-3">
+<h3 id="org4f92440"><span class="section-number-3">3.1.</span> <a href="#org4f92440">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org36c30a3">
+<figure id="org34d3dc2">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org399578b">
+<figure id="org73434bb">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge63032c" class="outline-2">
-<h2 id="orge63032c"><span class="section-number-2">4.</span> <a href="#orge63032c">他们的928</a></h2>
+<div id="outline-container-org33f5593" class="outline-2">
+<h2 id="org33f5593"><span class="section-number-2">4.</span> <a href="#org33f5593">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgb422f64" class="outline-2">
-<h2 id="orgb422f64"><span class="section-number-2">5.</span> <a href="#orgb422f64">总结</a></h2>
+<div id="outline-container-org1365a32" class="outline-2">
+<h2 id="org1365a32"><span class="section-number-2">5.</span> <a href="#org1365a32">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-12 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 03:01</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
