Update from https://github.com/thebesttv/eserver-static/commit/fac51557045434721fe8359bc07981d58246f6de

--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-13 03:01 -->
+<!-- 2022-10-13 20:18 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -36,12 +36,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgff704b0">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orgaffc9b5">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org058b723">1.1. window config &amp; register</a></li>
-<li><a href="#orgcdc45fb">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orgde22481">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgbdb45c2">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orga56cc11">1.1. window config &amp; register</a></li>
+<li><a href="#orgd5cfb6f">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orgbbee2b2">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgd3df59c">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +49,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgff704b0" class="outline-2">
-<h2 id="orgff704b0"><span class="section-number-2">1.</span> <a href="#orgff704b0">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orgaffc9b5" class="outline-2">
+<h2 id="orgaffc9b5"><span class="section-number-2">1.</span> <a href="#orgaffc9b5">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org058b723" class="outline-3">
-<h3 id="org058b723"><span class="section-number-3">1.1.</span> <a href="#org058b723">window config &amp; register</a></h3>
+<div id="outline-container-orga56cc11" class="outline-3">
+<h3 id="orga56cc11"><span class="section-number-3">1.1.</span> <a href="#orga56cc11">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -68,8 +68,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgcdc45fb" class="outline-3">
-<h3 id="orgcdc45fb"><span class="section-number-3">1.2.</span> <a href="#orgcdc45fb"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgd5cfb6f" class="outline-3">
+<h3 id="orgd5cfb6f"><span class="section-number-3">1.2.</span> <a href="#orgd5cfb6f"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -92,8 +92,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgde22481" class="outline-3">
-<h3 id="orgde22481"><span class="section-number-3">1.3.</span> <a href="#orgde22481"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orgbbee2b2" class="outline-3">
+<h3 id="orgbbee2b2"><span class="section-number-3">1.3.</span> <a href="#orgbbee2b2"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -106,8 +106,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgbdb45c2" class="outline-3">
-<h3 id="orgbdb45c2"><span class="section-number-3">1.4.</span> <a href="#orgbdb45c2"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgd3df59c" class="outline-3">
+<h3 id="orgd3df59c"><span class="section-number-3">1.4.</span> <a href="#orgd3df59c"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -126,7 +126,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 03:01</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 20:18</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
