--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-13 03:01 -->
+<!-- 2022-10-13 20:18 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org40c8753">1. 妙妙文章</a>
+<li><a href="#orgb05162b">1. 妙妙文章</a>
 <ul>
-<li><a href="#org5768db8">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org700c38c">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org599a96e">1.3. 关于编辑器</a></li>
-<li><a href="#org1d845af">1.4. 关于代码</a>
+<li><a href="#org466942d">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orge9dd811">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org9a95b53">1.3. 关于编辑器</a></li>
+<li><a href="#org133012e">1.4. 关于代码</a>
 <ul>
-<li><a href="#org1e5edda">1.4.1. Lisp</a></li>
+<li><a href="#org6f3cac2">1.4.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgc18cd78">1.5. 关于CPU</a></li>
-<li><a href="#org3db9ec0">1.6. 关于算法</a>
+<li><a href="#orge516529">1.5. 关于CPU</a></li>
+<li><a href="#org60b0f4a">1.6. 关于算法</a>
 <ul>
-<li><a href="#org1c2909f">1.6.1. 关于随机</a></li>
+<li><a href="#org9dca699">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org84529b1">1.7. 关于AI</a></li>
-<li><a href="#org2cefeb5">1.8. 关于软件</a>
+<li><a href="#org9fca708">1.7. 关于AI</a></li>
+<li><a href="#org16159ca">1.8. 关于软件</a>
 <ul>
-<li><a href="#org76039de">1.8.1. SQLite</a></li>
+<li><a href="#orgd02eb08">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgc626766">1.9. 关于workflow</a></li>
+<li><a href="#org5ac768d">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgd03219f">2. 棒棒视频</a>
+<li><a href="#orgb036926">2. 棒棒视频</a>
 <ul>
-<li><a href="#org01017d2">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org0f37efd">2.2. 各种剧</a></li>
-<li><a href="#orge1eed71">2.3. 电影</a></li>
+<li><a href="#org364e965">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org8eb9484">2.2. 各种剧</a></li>
+<li><a href="#org892602e">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org16a1173">3. 快乐游戏</a></li>
-<li><a href="#org1351d12">4. 宝藏博主</a></li>
-<li><a href="#org28a9b9d">5. 有意思的</a>
+<li><a href="#org9cd528f">3. 快乐游戏</a></li>
+<li><a href="#orgae4f2c6">4. 宝藏博主</a></li>
+<li><a href="#org61bae5d">5. 有意思的</a>
 <ul>
-<li><a href="#org5a54e14">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgf573480">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org0daeab0">6. 我想玩的</a></li>
+<li><a href="#org9b25447">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org40c8753" class="outline-2">
-<h2 id="org40c8753"><span class="section-number-2">1.</span> <a href="#org40c8753">妙妙文章</a></h2>
+<div id="outline-container-orgb05162b" class="outline-2">
+<h2 id="orgb05162b"><span class="section-number-2">1.</span> <a href="#orgb05162b">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org22e3110">
+<figure id="org39b87cd">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org5768db8" class="outline-3">
-<h3 id="org5768db8"><span class="section-number-3">1.1.</span> <a href="#org5768db8">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org466942d" class="outline-3">
+<h3 id="org466942d"><span class="section-number-3">1.1.</span> <a href="#org466942d">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org700c38c" class="outline-3">
-<h3 id="org700c38c"><span class="section-number-3">1.2.</span> <a href="#org700c38c">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orge9dd811" class="outline-3">
+<h3 id="orge9dd811"><span class="section-number-3">1.2.</span> <a href="#orge9dd811">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org599a96e" class="outline-3">
-<h3 id="org599a96e"><span class="section-number-3">1.3.</span> <a href="#org599a96e">关于编辑器</a></h3>
+<div id="outline-container-org9a95b53" class="outline-3">
+<h3 id="org9a95b53"><span class="section-number-3">1.3.</span> <a href="#org9a95b53">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org1d845af" class="outline-3">
-<h3 id="org1d845af"><span class="section-number-3">1.4.</span> <a href="#org1d845af">关于代码</a></h3>
+<div id="outline-container-org133012e" class="outline-3">
+<h3 id="org133012e"><span class="section-number-3">1.4.</span> <a href="#org133012e">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -615,8 +615,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org1e5edda" class="outline-4">
-<h4 id="org1e5edda"><span class="section-number-4">1.4.1.</span> <a href="#org1e5edda">Lisp</a></h4>
+<div id="outline-container-org6f3cac2" class="outline-4">
+<h4 id="org6f3cac2"><span class="section-number-4">1.4.1.</span> <a href="#org6f3cac2">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-4-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -639,8 +639,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgc18cd78" class="outline-3">
-<h3 id="orgc18cd78"><span class="section-number-3">1.5.</span> <a href="#orgc18cd78">关于CPU</a></h3>
+<div id="outline-container-orge516529" class="outline-3">
+<h3 id="orge516529"><span class="section-number-3">1.5.</span> <a href="#orge516529">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -655,8 +655,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org3db9ec0" class="outline-3">
-<h3 id="org3db9ec0"><span class="section-number-3">1.6.</span> <a href="#org3db9ec0">关于算法</a></h3>
+<div id="outline-container-org60b0f4a" class="outline-3">
+<h3 id="org60b0f4a"><span class="section-number-3">1.6.</span> <a href="#org60b0f4a">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org1c2909f" class="outline-4">
-<h4 id="org1c2909f"><span class="section-number-4">1.6.1.</span> <a href="#org1c2909f">关于随机</a></h4>
+<div id="outline-container-org9dca699" class="outline-4">
+<h4 id="org9dca699"><span class="section-number-4">1.6.1.</span> <a href="#org9dca699">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org84529b1" class="outline-3">
-<h3 id="org84529b1"><span class="section-number-3">1.7.</span> <a href="#org84529b1">关于AI</a></h3>
+<div id="outline-container-org9fca708" class="outline-3">
+<h3 id="org9fca708"><span class="section-number-3">1.7.</span> <a href="#org9fca708">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org2cefeb5" class="outline-3">
-<h3 id="org2cefeb5"><span class="section-number-3">1.8.</span> <a href="#org2cefeb5">关于软件</a></h3>
+<div id="outline-container-org16159ca" class="outline-3">
+<h3 id="org16159ca"><span class="section-number-3">1.8.</span> <a href="#org16159ca">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org76039de" class="outline-4">
-<h4 id="org76039de"><span class="section-number-4">1.8.1.</span> <a href="#org76039de">SQLite</a></h4>
+<div id="outline-container-orgd02eb08" class="outline-4">
+<h4 id="orgd02eb08"><span class="section-number-4">1.8.1.</span> <a href="#orgd02eb08">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgc626766" class="outline-3">
-<h3 id="orgc626766"><span class="section-number-3">1.9.</span> <a href="#orgc626766">关于workflow</a></h3>
+<div id="outline-container-org5ac768d" class="outline-3">
+<h3 id="org5ac768d"><span class="section-number-3">1.9.</span> <a href="#org5ac768d">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd03219f" class="outline-2">
-<h2 id="orgd03219f"><span class="section-number-2">2.</span> <a href="#orgd03219f">棒棒视频</a></h2>
+<div id="outline-container-orgb036926" class="outline-2">
+<h2 id="orgb036926"><span class="section-number-2">2.</span> <a href="#orgb036926">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -795,8 +795,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org01017d2" class="outline-3">
-<h3 id="org01017d2"><span class="section-number-3">2.1.</span> <a href="#org01017d2">Veritasium 真理元素</a></h3>
+<div id="outline-container-org364e965" class="outline-3">
+<h3 id="org364e965"><span class="section-number-3">2.1.</span> <a href="#org364e965">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -821,8 +821,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0f37efd" class="outline-3">
-<h3 id="org0f37efd"><span class="section-number-3">2.2.</span> <a href="#org0f37efd">各种剧</a></h3>
+<div id="outline-container-org8eb9484" class="outline-3">
+<h3 id="org8eb9484"><span class="section-number-3">2.2.</span> <a href="#org8eb9484">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -845,8 +845,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orge1eed71" class="outline-3">
-<h3 id="orge1eed71"><span class="section-number-3">2.3.</span> <a href="#orge1eed71">电影</a></h3>
+<div id="outline-container-org892602e" class="outline-3">
+<h3 id="org892602e"><span class="section-number-3">2.3.</span> <a href="#org892602e">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -872,8 +872,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org16a1173" class="outline-2">
-<h2 id="org16a1173"><span class="section-number-2">3.</span> <a href="#org16a1173">快乐游戏</a></h2>
+<div id="outline-container-org9cd528f" class="outline-2">
+<h2 id="org9cd528f"><span class="section-number-2">3.</span> <a href="#org9cd528f">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -902,8 +902,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1351d12" class="outline-2">
-<h2 id="org1351d12"><span class="section-number-2">4.</span> <a href="#org1351d12">宝藏博主</a></h2>
+<div id="outline-container-orgae4f2c6" class="outline-2">
+<h2 id="orgae4f2c6"><span class="section-number-2">4.</span> <a href="#orgae4f2c6">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -914,7 +914,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgd1a03e9">
+<figure id="org8bc8315">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -922,8 +922,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org28a9b9d" class="outline-2">
-<h2 id="org28a9b9d"><span class="section-number-2">5.</span> <a href="#org28a9b9d">有意思的</a></h2>
+<div id="outline-container-org61bae5d" class="outline-2">
+<h2 id="org61bae5d"><span class="section-number-2">5.</span> <a href="#org61bae5d">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -944,11 +944,13 @@ Always check your friendship before terminating it.  hhhh</li>
 <li>还有人拿它来可视化论坛的帖子:
 <a href="https://edgeryders.eu/t/visualizing-our-7-years-of-online-dialogue-with-gource/11905">Visualizing our 7 years of online dialogue with Gource</a></li>
 </ul></li>
+<li><a href="https://gitlab.com/hardenedlinux/animula">animula</a> 前身是 LambdaChip, 但貌似公司倒闭了, 现在变成开源项目.
+希望将来可以在便宜的硬件上运行 Scheme.</li>
 </ul>
 </div>
 
-<div id="outline-container-org5a54e14" class="outline-3">
-<h3 id="org5a54e14"><span class="section-number-3">5.1.</span> <a href="#org5a54e14">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgf573480" class="outline-3">
+<h3 id="orgf573480"><span class="section-number-3">5.1.</span> <a href="#orgf573480">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -960,8 +962,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org0daeab0" class="outline-2">
-<h2 id="org0daeab0"><span class="section-number-2">6.</span> <a href="#org0daeab0">我想玩的</a></h2>
+<div id="outline-container-org9b25447" class="outline-2">
+<h2 id="org9b25447"><span class="section-number-2">6.</span> <a href="#org9b25447">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -983,8 +985,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 03:01</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-13 20:16</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 20:18</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
