--- a/content/daily/my-2021.html
+++ b/content/daily/my-2021.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-13 03:01 -->
+<!-- 2022-10-13 20:18 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>我的2021</title>
@@ -36,9 +36,9 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb65846b">1. 接下来</a></li>
-<li><a href="#orgcd179ea">2. 想玩的(坑)</a></li>
-<li><a href="#org2d08a45">3. 寒假过半的UPD</a></li>
+<li><a href="#org273a638">1. 接下来</a></li>
+<li><a href="#orge551c81">2. 想玩的(坑)</a></li>
+<li><a href="#org84e95a6">3. 寒假过半的UPD</a></li>
 </ul>
 </div>
 </nav>
@@ -59,8 +59,8 @@
 这个寒假有好多让我期待的事情, 包括3d打印机, 包括这个 <a href="https://github.com/bencbartlett/3D-printed-mirror-array">mirror array</a>.
 </p>
 
-<div id="outline-container-orgb65846b" class="outline-2">
-<h2 id="orgb65846b"><span class="section-number-2">1.</span> <a href="#orgb65846b">接下来</a></h2>
+<div id="outline-container-org273a638" class="outline-2">
+<h2 id="org273a638"><span class="section-number-2">1.</span> <a href="#org273a638">接下来</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 得开始考虑了, 是读研呢, 还是工作呢. 虽然挺想直接工作, 但能力实在太有限了呀, 现在基本打算是读研了吧. 不过读研, 那什么方向呢? 哪个学校呢? 不知道, 啥都不知道. 本来觉得不想再碰深度学习之类的, 然后发现软工好像更恶心的样子, 而学了一学期的机器学习, 感觉虽然还是不太喜欢, 但可能勉强可以接受.  不过我还是更想学一些底层的东西吧, 像是组原里的risc-v, 还有操作系统一类的. 不过这些我从来没深入学过, 谁知道呢. 方向方向, 可能下学期的哪一天, 我就突然明白自己想要学什么了吧.
@@ -68,8 +68,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgcd179ea" class="outline-2">
-<h2 id="orgcd179ea"><span class="section-number-2">2.</span> <a href="#orgcd179ea">想玩的(坑)</a></h2>
+<div id="outline-container-orge551c81" class="outline-2">
+<h2 id="orge551c81"><span class="section-number-2">2.</span> <a href="#orge551c81">想玩的(坑)</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 寒假想先装完买的3d打印机, 然后弄出滑台, 做一个廉价版的注射泵, 然后试图做出泡泡钟. 可以的话也实现一个 mirror array.
@@ -100,8 +100,8 @@
 </div>
 </div>
 
-<div id="outline-container-org2d08a45" class="outline-2">
-<h2 id="org2d08a45"><span class="section-number-2">3.</span> <a href="#org2d08a45">寒假过半的UPD</a></h2>
+<div id="outline-container-org84e95a6" class="outline-2">
+<h2 id="org84e95a6"><span class="section-number-2">3.</span> <a href="#org84e95a6">寒假过半的UPD</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <a href="https://www.bilibili.com/video/BV1BL4y1W7FT">和60万人一起告别2021 &#x2014; 林捂捂</a>
@@ -130,7 +130,7 @@ Anyway, 新年快乐!!!
 </p>
 
 
-<figure id="org419db8f">
+<figure id="orgd2f340f">
 <img src="./my-2021/new-year.jpg" alt="new-year.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -142,7 +142,7 @@ Anyway, 新年快乐!!!
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-01-31 22:53</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 03:01</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 20:18</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/my-2021.org">content/daily/my-2021.org</a></td></tr>
 </table>
