Update from https://github.com/thebesttv/eserver-static/commit/d46c9fc1928163feb72b679642951ad384776c6b

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-15 02:58 -->
+<!-- 2022-10-16 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2f1c3f6">1. 暑假</a>
+<li><a href="#org8a9b26e">1. 暑假</a>
 <ul>
-<li><a href="#orgde2345c">1.1. 夏令营</a></li>
+<li><a href="#org3f30b2d">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org216c6d7">2. 打工</a></li>
-<li><a href="#org5e4a65b">3. 我的928</a>
+<li><a href="#org1f7f189">2. 打工</a></li>
+<li><a href="#org8dee874">3. 我的928</a>
 <ul>
-<li><a href="#org7d96b44">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgfd30b8d">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org37fc1cd">4. 他们的928</a></li>
-<li><a href="#org4a5dc32">5. 总结</a></li>
+<li><a href="#org3dfb1af">4. 他们的928</a></li>
+<li><a href="#orgbe3464f">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org1393d91">
+<figure id="orgbb21b2c">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org2f1c3f6" class="outline-2">
-<h2 id="org2f1c3f6"><span class="section-number-2">1.</span> <a href="#org2f1c3f6">暑假</a></h2>
+<div id="outline-container-org8a9b26e" class="outline-2">
+<h2 id="org8a9b26e"><span class="section-number-2">1.</span> <a href="#org8a9b26e">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgde2345c" class="outline-3">
-<h3 id="orgde2345c"><span class="section-number-3">1.1.</span> <a href="#orgde2345c">夏令营</a></h3>
+<div id="outline-container-org3f30b2d" class="outline-3">
+<h3 id="org3f30b2d"><span class="section-number-3">1.1.</span> <a href="#org3f30b2d">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-org216c6d7" class="outline-2">
-<h2 id="org216c6d7"><span class="section-number-2">2.</span> <a href="#org216c6d7">打工</a></h2>
+<div id="outline-container-org1f7f189" class="outline-2">
+<h2 id="org1f7f189"><span class="section-number-2">2.</span> <a href="#org1f7f189">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org5e4a65b" class="outline-2">
-<h2 id="org5e4a65b"><span class="section-number-2">3.</span> <a href="#org5e4a65b">我的928</a></h2>
+<div id="outline-container-org8dee874" class="outline-2">
+<h2 id="org8dee874"><span class="section-number-2">3.</span> <a href="#org8dee874">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org7d96b44" class="outline-3">
-<h3 id="org7d96b44"><span class="section-number-3">3.1.</span> <a href="#org7d96b44">928演唱会(bushi</a></h3>
+<div id="outline-container-orgfd30b8d" class="outline-3">
+<h3 id="orgfd30b8d"><span class="section-number-3">3.1.</span> <a href="#orgfd30b8d">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org3aee66c">
+<figure id="org94ae2c7">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgc00e73a">
+<figure id="org5b62ce2">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org37fc1cd" class="outline-2">
-<h2 id="org37fc1cd"><span class="section-number-2">4.</span> <a href="#org37fc1cd">他们的928</a></h2>
+<div id="outline-container-org3dfb1af" class="outline-2">
+<h2 id="org3dfb1af"><span class="section-number-2">4.</span> <a href="#org3dfb1af">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org4a5dc32" class="outline-2">
-<h2 id="org4a5dc32"><span class="section-number-2">5.</span> <a href="#org4a5dc32">总结</a></h2>
+<div id="outline-container-orgbe3464f" class="outline-2">
+<h2 id="orgbe3464f"><span class="section-number-2">5.</span> <a href="#orgbe3464f">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-15 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-16 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
