--- a/content/daily/2021-05-20.html
+++ b/content/daily/2021-05-20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-15 02:58 -->
+<!-- 2022-10-16 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>520快乐</title>
@@ -36,9 +36,9 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org6ded5d1">1. 水水体育课</a></li>
-<li><a href="#org313308b">2. 又是一轮毕业季</a></li>
-<li><a href="#orgce10f42">3. 520 点灯</a></li>
+<li><a href="#orgdb03772">1. 水水体育课</a></li>
+<li><a href="#org46064aa">2. 又是一轮毕业季</a></li>
+<li><a href="#org9b82fb9">3. 520 点灯</a></li>
 </ul>
 </div>
 </nav>
@@ -47,8 +47,8 @@
 虽然84我的节日，不过一大早刷着空间还挺欢乐的，就祝我的朋友们快乐叭😃
 </p>
 
-<div id="outline-container-org6ded5d1" class="outline-2">
-<h2 id="org6ded5d1"><span class="section-number-2">1.</span> <a href="#org6ded5d1">水水体育课</a></h2>
+<div id="outline-container-orgdb03772" class="outline-2">
+<h2 id="orgdb03772"><span class="section-number-2">1.</span> <a href="#orgdb03772">水水体育课</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 果然体侧第一天的体育课超级舒服，虽然50米、引体向上啥的测得不咋的，不过挺舒服的，哈哈。还帮一个女生仰卧起坐的时候按腿，快乐😉。
@@ -56,8 +56,8 @@
 </div>
 </div>
 
-<div id="outline-container-org313308b" class="outline-2">
-<h2 id="org313308b"><span class="section-number-2">2.</span> <a href="#org313308b">又是一轮毕业季</a></h2>
+<div id="outline-container-org46064aa" class="outline-2">
+<h2 id="org46064aa"><span class="section-number-2">2.</span> <a href="#org46064aa">又是一轮毕业季</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 今天是本科毕业生拍照，好多人穿着学士服在图书馆前面的草坪和台阶拍照，
@@ -76,8 +76,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgce10f42" class="outline-2">
-<h2 id="orgce10f42"><span class="section-number-2">3.</span> <a href="#orgce10f42">520 点灯</a></h2>
+<div id="outline-container-org9b82fb9" class="outline-2">
+<h2 id="org9b82fb9"><span class="section-number-2">3.</span> <a href="#org9b82fb9">520 点灯</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 简直是去看人的😓
@@ -88,13 +88,13 @@
 </p>
 
 
-<figure id="orga175a19">
+<figure id="org0a3f0c9">
 <img src="./2021-05-20/lights-1.jpg" alt="lights-1.jpg" width="100%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
 
 
-<figure id="orgd8538e8">
+<figure id="org79240b4">
 <img src="./2021-05-20/lights-2.jpg" alt="lights-2.jpg" width="100%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -103,7 +103,7 @@
 偷偷盗一张亦憨的520全图🤫😉
 </p>
 
-<figure id="orgf03fcd3">
+<figure id="orgf28afc2">
 <img src="./2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="100%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -115,7 +115,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-20 07:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-15 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-16 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-20.org">content/daily/2021-05-20.org</a></td></tr>
 </table>
