--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-15 02:58 -->
+<!-- 2022-10-16 02:55 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -36,12 +36,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org797d33d">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org54ea843">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org3a803cc">1.1. window config &amp; register</a></li>
-<li><a href="#orgc639b4d">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#orga1f4273">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org595d2c2">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orgadc2b0a">1.1. window config &amp; register</a></li>
+<li><a href="#org09642b4">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orgede5532">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgcb40b7d">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -49,12 +49,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org797d33d" class="outline-2">
-<h2 id="org797d33d"><span class="section-number-2">1.</span> <a href="#org797d33d">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org54ea843" class="outline-2">
+<h2 id="org54ea843"><span class="section-number-2">1.</span> <a href="#org54ea843">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org3a803cc" class="outline-3">
-<h3 id="org3a803cc"><span class="section-number-3">1.1.</span> <a href="#org3a803cc">window config &amp; register</a></h3>
+<div id="outline-container-orgadc2b0a" class="outline-3">
+<h3 id="orgadc2b0a"><span class="section-number-3">1.1.</span> <a href="#orgadc2b0a">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -68,8 +68,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgc639b4d" class="outline-3">
-<h3 id="orgc639b4d"><span class="section-number-3">1.2.</span> <a href="#orgc639b4d"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org09642b4" class="outline-3">
+<h3 id="org09642b4"><span class="section-number-3">1.2.</span> <a href="#org09642b4"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -92,8 +92,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orga1f4273" class="outline-3">
-<h3 id="orga1f4273"><span class="section-number-3">1.3.</span> <a href="#orga1f4273"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orgede5532" class="outline-3">
+<h3 id="orgede5532"><span class="section-number-3">1.3.</span> <a href="#orgede5532"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -106,8 +106,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org595d2c2" class="outline-3">
-<h3 id="org595d2c2"><span class="section-number-3">1.4.</span> <a href="#org595d2c2"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgcb40b7d" class="outline-3">
+<h3 id="orgcb40b7d"><span class="section-number-3">1.4.</span> <a href="#orgcb40b7d"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -126,7 +126,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-15 02:58</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-16 02:55</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
